--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <section id="hero" class="hero section-bg">
 
     <div class="image-container">
-      <img src="assets/img/Abibèko.png" alt="Votre image">
+      <img src="assets/img/Abibèko.jpg" alt="Votre image">
     </div>
 
     <div class="text-container">
