--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   <main id="main">
 
     <section id="get-started" class="get-started">
-      <div class="container" data-aos="fade-up">
+      <div class="container">
     
         <div class="content">
           <h2>PRESENTATION</h2>
